# ddd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
ddd-rs/: Cargo.toml
ddd-rs-derive/: Cargo.toml
ddd-rs-derive/src/: aggregate_root.rs  domain_event.rs  entity.rs  lib.rs  notification.rs  value_object.rs
ddd-rs/src/: error.rs  lib.rs
ddd-rs/src/application/: domain_event_handler.rs  mod.rs  notification_handler.rs  repository.rs  request_handler.rs  service.rs
ddd-rs/src/domain/: aggregate.rs  aggregate_root.rs  domain_event.rs  entity.rs  mod.rs  value_object.rs
ddd-rs/src/infrastructure/: mod.rs
ddd-rs/src/infrastructure/memory/: repository.rs
ddd-rs/src/infrastructure/persistence/: domain.rs  in_memory.rs  mod.rs
ddd-rs/src/presentation/: mod.rs  notification.rs  request.rs  result.rs
