[package]
name = "ddd-rs-derive"
version = "0.3.0"
edition = "2021"
authors = ["Gabriel Kim <gabrielkim13@gmail.com>"]
license = "MIT"
description = "`ddd-rs`'s proc macros."
repository = "https://github.com/gabrielkim13/ddd-rs"
homepage = "https://github.com/gabrielkim13/ddd-rs"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
quote = "1"
syn = "1"

[dev-dependencies]
async-trait = "0.1"
chrono = "0.4"
ddd-rs = { version = "0.3", path = "../ddd-rs" }
uuid = { version = "1", features = ["v4"] }
