[package]
name = "ddd-rs-derive"
version = "1.1.0"
edition = "2021"
authors = ["Gabriel Kim <gabrielkim13@gmail.com>"]
license = "MIT"
description = "`ddd-rs`'s proc macros."
repository = "https://github.com/gabrielkim13/ddd-rs"
homepage = "https://github.com/gabrielkim13/ddd-rs"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
quote = "1"
syn = "2"
