[package]
name = "ddd-rs"
version = "1.2.0"
edition = "2021"
authors = ["Gabriel Kim <gabrielkim13@gmail.com>"]
license = "MIT"
description = "Domain-Driven Design (DDD) building blocks, for Rust applications."
repository = "https://github.com/gabrielkim13/ddd-rs"
homepage = "https://github.com/gabrielkim13/ddd-rs"
categories = ["rust-patterns"]

[dependencies]
async-trait = "0.1"
ddd-rs-derive = { version = "=1.1.0", optional = true, path = "../ddd-rs-derive" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["derive"]

# Provides `derive` macros.
derive = ["ddd-rs-derive"]
